# ChangeLog for app-mobilephone/obexd
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-mobilephone/cvs-repo/gentoo-x86/app-mobilephone/obexd/ChangeLog,v 1.39 2011/06/24 12:44:04 pacho Exp $

*obexd-0.41 (24 Jun 2011)

  24 Jun 2011; Pacho Ramos <pacho@gentoo.org> -obexd-0.37.ebuild,
  +obexd-0.41.ebuild:
  Version bump, remove old.

  29 May 2011; Markos Chandras <hwoarang@gentoo.org> obexd-0.40.ebuild:
  Stable on amd64 wrt bug #366969

  28 May 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> obexd-0.40.ebuild:
  x86 stable wrt bug #366969

*obexd-0.40 (28 Jan 2011)

  28 Jan 2011; Pacho Ramos <pacho@gentoo.org> -obexd-0.34.ebuild,
  -obexd-0.35.ebuild, +obexd-0.40.ebuild:
  Version bump, remove old.

  04 Jan 2011; Markos Chandras <hwoarang@gentoo.org> obexd-0.37.ebuild:
  Stable on amd64 wrt bug #349474

  01 Jan 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> obexd-0.37.ebuild:
  x86 stable wrt bug #349474

*obexd-0.37 (25 Nov 2010)

  25 Nov 2010; Pacho Ramos <pacho@gentoo.org> -obexd-0.29.ebuild,
  +obexd-0.37.ebuild:
  Version bump and remove old.

  04 Nov 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> obexd-0.34.ebuild:
  x86 stable wrt bug #343489

  31 Oct 2010; Markos Chandras <hwoarang@gentoo.org> obexd-0.34.ebuild:
  Stable on amd64 wrt bug #343489

*obexd-0.35 (31 Oct 2010)

  31 Oct 2010; Pacho Ramos <pacho@gentoo.org>
  -files/obexd-0.21-fix_configure.patch, -obexd-0.28.ebuild,
  -obexd-0.32.ebuild, -obexd-0.33.ebuild, +obexd-0.35.ebuild:
  Drop old and version bump:
	Fix regression on suspend on opening.
	Fix suspend stream on opening if no data.
	Fix memory leaks in phonebook-tracker module.
	Fix not responding Not Found for filtered vcard-listing.
	Fix not responding Not Found when no entry is found.
	Fix issue with X-IRMC-CALL-DATETIME format.

*obexd-0.34 (07 Oct 2010)

  07 Oct 2010; Pacho Ramos <pacho@gentoo.org> +obexd-0.34.ebuild:
  Version bump with upstream bugfixes.
