@@ -4,15 +4,17 @@ Hash: SHA1
 DIST obexd-0.23.tar.gz 376897 RMD160 8157dfe5a6e448add3018c1ecdca9a9a8f654379 SHA1 42cd7777baaa6535e9ba81556e63ea5ff21c3e59 SHA256 89ffc547a28213432e28d709f7f668f79145fb41480358577d13ad1058b4a017
 DIST obexd-0.40.tar.gz 413685 RMD160 0028aaff93d1204b63a4e5456dc3ecbc1571c09f SHA1 5affd3090574a39d7b53d39d076e6c54e2ba90e6 SHA256 5440a3df1d33c2c12cca61fff1e8d643488ea139eef7340cfdbf6d2e5ea3e04b
 DIST obexd-0.41.tar.gz 422915 RMD160 525eea375cf7fda96819fe12a9c3bebc13a0e41a SHA1 78f9069748652881d53dee6fdbcbaf24494c6780 SHA256 edfa54f7a08d00f81ababe4267d15ec138e9c80dd76d0493dcff451374dac7be
+DIST obexd-0.42.tar.gz 426826 RMD160 0bf271bb34954d51759350f7e50772ca36dab6b6 SHA1 5b9f701ef562c0f900af792b024367d3383f41ad SHA256 b2e8c084b77584a0e326cd7d45c573d4f12a33454cf5d629f22980fa2368fd4f
 EBUILD obexd-0.23.ebuild 898 RMD160 4896c096fc82972663f629e75a84ab161db15564 SHA1 27fec1915b4b0e30d1406c91c733bd6b5abf9e01 SHA256 e4b694cf22d567abb9202b0868d30cad7f14b751d560aac90b5f7160c646e0cc
 EBUILD obexd-0.40.ebuild 999 RMD160 9479c6f496c06f75be7b7a6369f3c2011e012691 SHA1 43f81ef870853cfb6d29f2563e47e229de5fb05d SHA256 c95ae45d4180eb9c522914db5dcb3d2820ea4cedf38363aabe52d79f27685277
 EBUILD obexd-0.41.ebuild 956 RMD160 67d360597e98dcf05796772be5d2fbd5cd37f17a SHA1 e484cb48f6ed5792b7ae75ff707c8c69cc090c5b SHA256 b609ddf223aa06b220a9162334353c1d8f6ef02d6fd0faa9482d1eeb3b2e315c
-MISC ChangeLog 6094 RMD160 8752bbe1e2fec421adc3f3708dfe6d491103fb54 SHA1 323766f9bc6a3c07983d6e1067743218600642be SHA256 3b3cdd6569dc43611ea2cf823d43d765b6a665e63c47a44cbf639bf597af3ce5
+EBUILD obexd-0.42.ebuild 956 RMD160 6f6bbbeafb33e14241de047592a09eb37584ffaf SHA1 f9e08b741b02dd900579481f6fce38025e652a37 SHA256 b687bdc1e853b0eb90e98665432a0663a16c545aba9ce9efbcbc9797555fabbb
+MISC ChangeLog 6240 RMD160 de8edfd6cd83a2218af8132ee18cf7fd55e6330d SHA1 ef0bd68f734f7d6066a4442910732d490c13ce6f SHA256 5c17815dd56ef564f4ca45983d12c077ccd06b2112755f8b803a1da07b9c4c58
 MISC metadata.xml 629 RMD160 6c4155b742b30136c4b88c5c07782fa07ae5ce79 SHA1 d31a49d65459c28eb0967f4eb40247e9b6858561 SHA256 f6cade13d969dd52e91ebdbadb969ef2a3a1f4e383255988a120a9acf713cac1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk4EhpkACgkQCaWpQKGI+9ScxgCfSqcmtBjJYHJ1GcqfijRfmZ4Y
-x/IAn1Z+NVgpnBy09hK4J4VJqLd1vY2G
-=yF8e
+iEYEARECAAYFAk4l1MIACgkQCaWpQKGI+9RJZgCeK2eimu5qEmkuLanTmBBwsQNt
+PPoAn1eRl2I+70JA6KQGK4ZWSUt2Qr+I
+=poEw
 -----END PGP SIGNATURE-----
