@@ -1,6 +1,11 @@
 # ChangeLog for app-mobilephone/obexd
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-mobilephone/cvs-repo/gentoo-x86/app-mobilephone/obexd/ChangeLog,v 1.39 2011/06/24 12:44:04 pacho Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-mobilephone/cvs-repo/gentoo-x86/app-mobilephone/obexd/ChangeLog,v 1.40 2011/07/19 19:02:20 pacho Exp $
+
+*obexd-0.42 (19 Jul 2011)
+
+  19 Jul 2011; Pacho Ramos <pacho@gentoo.org> +obexd-0.42.ebuild:
+  Version bump with some fixes for phonebook stuff.
 
 *obexd-0.41 (24 Jun 2011)
 
